fixed text-align bug

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ input {
 /* Input area to add a new review */
 .add-review {
 	padding: 0.5rem 1rem;
-	text-align: cent
+	text-align: center;
 }
 
 
